--- a/viikko3/web-login/report.html
+++ b/viikko3/web-login/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,30480],[[4,5,6,0,[],[1,17,7089],[],[[7,0,0,[],[1,1042,2775],[]],[9,0,0,[],[1,3818,2724],[]]],[],[2,2,0,0]],[8,10,11,0,[],[1,7108,23368],[],[[12,0,0,[],[1,8144,6668],[]],[13,0,0,[],[1,14813,7584],[]],[14,0,0,[],[1,22398,7515],[]]],[],[3,3,0,0]]],[],[],[5,5,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,62181],[],[[4,0,0,[],[1,523,8059],[]],[5,0,0,[],[1,8582,17039],[]],[6,0,0,[],[1,25622,9035],[]],[7,0,0,[],[1,34658,8999],[]],[8,0,0,[],[1,43658,8968],[]],[9,0,0,[],[1,52626,8994],[]]],[],[6,6,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/kitakita/Desktop/Yliopisto/Tietojenkäsittely Tiede/Aineopinnot/Ohjelmistotuotanto/palautusrepositorio/viikko3/web-login/src/tests","*src/tests","*Home","*/home/kitakita/Desktop/Yliopisto/Tietojenkäsittely Tiede/Aineopinnot/Ohjelmistotuotanto/palautusrepositorio/viikko3/web-login/src/tests/home.robot","*src/tests/home.robot","*Click Login Link","*Login","*Click Register Link","*/home/kitakita/Desktop/Yliopisto/Tietojenkäsittely Tiede/Aineopinnot/Ohjelmistotuotanto/palautusrepositorio/viikko3/web-login/src/tests/login.robot","*src/tests/login.robot","*Login With Correct Credentials","*Login With Nonexistent Username","*Login With Incorrect Password"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Register","*/home/kitakita/Desktop/Yliopisto/Tietojenkäsittely Tiede/Aineopinnot/Ohjelmistotuotanto/palautusrepositorio/viikko3/web-login/src/tests/register.robot","*src/tests/register.robot","*Register With Valid Username And Password","*Register With Username That Is Already In Use","*Register With Nonmatching Password And Password Confirmation","*Register With Too Short Username And Valid Password","*Register With Valid Username And Too Short Password","*Register With Valid Username And Invalid Password"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:27","fail":0,"label":"All Tests","pass":5,"skip":0}],[],[{"elapsed":"00:00:30","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":5,"skip":0},{"elapsed":"00:00:07","fail":0,"id":"s1-s1","label":"Tests.Home","name":"Home","pass":2,"skip":0},{"elapsed":"00:00:23","fail":0,"id":"s1-s2","label":"Tests.Login","name":"Login","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:01","fail":0,"label":"All Tests","pass":6,"skip":0}],[],[{"elapsed":"00:01:02","fail":0,"id":"s1","label":"Register","name":"Register","pass":6,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1731504688965;
+window.output["baseMillis"] = 1731508834173;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 30509;
+window.output["generated"] = 62188;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
